--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <title>Dom Challenge</title>
   <style>
     #counter {
-      background-color: black;
-      color: white;
+      background-color: blue;
+      color: red;
       display: table;
       padding: 10px;
     }
